quassel service file improvement

--- a/network/chat/quassel/files/quassel.service
+++ b/network/chat/quassel/files/quassel.service
@@ -3,9 +3,10 @@ Description=Distributed IRC Core
 After=network.target
 
 [Service]
-EnvironmentFile=/etc/conf.d/quassel
+User=quasselcore
+Group=quassel
 PIDFile=/var/run/quasselcore.pid
-ExecStart=/bin/su - quasselcore -c "/usr/bin/quasselcore --datadir=/var/cache/quassel"
+ExecStart=/usr/bin/quasselcore --datadir=/var/cache/quassel
 
 [Install]
 WantedBy=multi-user.target
