fixed javaws.desktop file

--- a/programming/language/java/sun-java/sun-jre/files/javaws.desktop
+++ b/programming/language/java/sun-java/sun-jre/files/javaws.desktop
@@ -3,7 +3,7 @@ Categories=System;
 Comment[en_US]=none
 Comment=
 Encoding=UTF-8
-Exec=/opt/sun-jdk/jre/bin/javaws
+Exec=/opt/sun-jdk/jre/bin/javaws -viewer
 GenericName[en_US]=javaws
 GenericName=javaws
 Icon=/opt/sun-jdk/jre/lib/desktop/icons/hicolor/48x48/apps/sun-javaws.png
