kill old kde mirror comu

--- a/system/base/pisi/files/mirrors.conf
+++ b/system/base/pisi/files/mirrors.conf
@@ -71,7 +71,6 @@ gnu http://ftp.wayne.edu/pub/gnu/
 gnu ftp://ftp.wayne.edu/pub/gnu/
 gnu http://kambing.vlsm.org/gnu/
 gnu http://gd.tuwien.ac.at/gnu/gnusrc/
-kde ftp://mirror.comu.edu.tr/kde/
 kde ftp://ftp.kde.org/pub/kde/
 kde http://chernabog.cc.vt.edu/pub/projects/kde/
 kde http://ftp.gtlib.cc.gatech.edu/pub/kde/
@@ -81,6 +80,7 @@ kde ftp://carroll.aset.psu.edu/pub/kde/
 kde ftp://ftp.oregonstate.edu/pub/kde/
 kde ftp://ftp.ussg.iu.edu/pub/kde/
 kde http://mirrors.isc.org/pub/kde/
+kde http://mirror.karneval.cz/pub/kde/
 kde http://ftp.belnet.be/packages/kde/
 kde http://ftp.fi.muni.cz/pub/kde/
 kde http://ftp.funet.fi/pub/mirrors/ftp.kde.org/pub/kde/
