kde mirrorları eklendi

--- a/system/base/pisi/files/mirrors.conf
+++ b/system/base/pisi/files/mirrors.conf
@@ -71,7 +71,32 @@ gnu http://ftp.wayne.edu/pub/gnu/
 gnu ftp://ftp.wayne.edu/pub/gnu/
 gnu http://kambing.vlsm.org/gnu/
 gnu http://gd.tuwien.ac.at/gnu/gnusrc/
+kde http://download.kde.org/
+kde http://master.kde.org/
 kde ftp://ftp.kde.org/pub/kde/
+kde http://ftp.icm.edu.pl/pub/unix/kde/
+kde http://ftp.pbone.net/pub/kde/
+kde http://ftp.fi.muni.cz/pub/kde/
+kde http://mirror.karneval.cz/pub/kde/
+kde http://ftp.funet.fi/pub/mirrors/ftp.kde.org/pub/kde/
+kde http://ftp.rz.uni-wuerzburg.de/pub/unix/kde/
+kde http://ftp-stud.fht-esslingen.de/Mirrors/ftp.kde.org/pub/kde/
+kde http://ftp5.gwdg.de/pub/linux/kde/
+kde http://fr2.rpmfind.net/linux/KDE/
+kde http://archive.sunet.se/pub/X11/kde/
+kde http://vesta.informatik.rwth-aachen.de/ftp/pub/mirror/kde/
+kde http://mirrors.dotsrc.org/kde/
+kde http://ftp.nluug.nl/pub/windowing/kde/
+kde http://ftp.SURFnet.nl/windowing/kde/
+kde http://kde-mirror.freenux.org/stable/
+kde http://www-ftp.lip6.fr/pub/X11/kde/
+kde http://mirrors.ircam.fr/pub/KDE/
+kde http://www.mirrorservice.org/sites/ftp.kde.org/pub/kde/
+kde http://kde.mirror.anlx.net/
+kde http://mirror.catn.com/pub/kde/
+kde http://mirrors.fe.up.pt/pub/kde/
+kde http://ftp.heanet.ie/mirrors/ftp.kde.org/
+kde http://ftp.rhnet.is/pub/kde/
 kde http://chernabog.cc.vt.edu/pub/projects/kde/
 kde http://ftp.gtlib.cc.gatech.edu/pub/kde/
 kde ftp://chernabog.cc.vt.edu/pub/projects/kde/
