--- a/science/mathematics/FreeMat/files/FreeMat.desktop
+++ b/science/mathematics/FreeMat/files/FreeMat.desktop
@@ -4,7 +4,7 @@ Comment[tr]=Özgür bir mühendislik ve bilimsel hesaplama programı
 Exec=FreeMat
 GenericName=Scientific Software Package
 GenericName[tr]=Bilimsel Hesaplama Paketi
-Icon=FreeMat.xpm
+Icon=FreeMat
 Name=FreeMat
 Name[tr]=FreeMat
 StartupNotify=false
