--- a/tex/tool/lyx/files/lyx.desktop
+++ b/tex/tool/lyx/files/lyx.desktop
@@ -2,8 +2,10 @@
 Encoding=UTF-8
 Type=Application
 Name=LyX
+Name[pl]=LyX
 Name[tr]=LyX
 GenericName=LaTeX Document Processor
+GenericName[pl]=Nakładka WYSIWYM na LaTeXa
 GenericName[tr]=LaTeX Belge İşlemci
 Exec=lyx
 Icon=/usr/share/pixmaps/lyx.png
