update xfce mirrors list

--- a/system/base/pisi/files/mirrors.conf
+++ b/system/base/pisi/files/mirrors.conf
@@ -213,7 +213,12 @@ xorg http://xorg.freedesktop.org/archive/
 xorg http://mirror.sg.depaul.edu/pub/x.org/
 xorg http://x.paracoda.com/pub/
 xorg http://x.hostingzero.com/
-xfce http://mocha.xfce.org/archive/
+xfce http://mirror.netcologne.de/xfce/
+xfce http://ftp.udc.es/xfce/
 xfce http://www.p0llux.be/xfce/
-xfce http://www.tx-us.xfce.org/archive/
-xfce http://www.ca-us.xfce.org/archive/
+xfce http://archive.be.xfce.org/
+xfce http://archive.be2.xfce.org/
+xfce http://archive.se.xfce.org/
+xfce http://xfce.mirror.uber.com.au/
+xfce http://mirror.yongbok.net/X11/xfce-mirror/
+xfce http://archive.al-us.xfce.org/
