--- a/game/strategy/warzone2100/files/warzone2100.desktop
+++ b/game/strategy/warzone2100/files/warzone2100.desktop
@@ -4,9 +4,11 @@ Version=1.0
 Encoding=UTF-8
 Name=Warzone 2100
 Name[de]=Warzone 2100
+Name[pl]=Warzone 2100
 Name[tr]=Warzone 2100
 GenericName=Strategy Game
 GenericName[de]=Strategiespiel
+GenericName[pl]=Gra strategiczna
 GenericName[tr]=Strateji Oyunu
 Icon=warzone2100
 Exec=warzone2100
