--- a/game/strategy/widelands/files/widelands.desktop
+++ b/game/strategy/widelands/files/widelands.desktop
@@ -4,6 +4,7 @@ Name=WideLands
 Exec=widelands
 Type=Application
 GenericName=Settlers II Clone
+GenericName[pl]=Klon Settlers II
 GenericName[tr]=Settlers II Benzeri
 Icon=widelands
 Categories=Game;StrategyGame;
