--- a/game/arcade/AstroMenace/files/AstroMenace.desktop
+++ b/game/arcade/AstroMenace/files/AstroMenace.desktop
@@ -5,6 +5,7 @@ Encoding=UTF-8
 Name=AstroMenace
 Name[tr]=AstroMenace
 GenericName=3D Space Simulation
+GenericName[pl]=Kosmiczna Symulacja 3D
 GenericName[tr]=3B Uzay Simülasyonu
 Icon=AstroMenace
 Exec=AstroMenace
