add stardict and turkish dictionaries

--- a/office/dictionary/stardict/files/defaultdict.cfg
+++ b/office/dictionary/stardict/files/defaultdict.cfg
@@ -1,5 +1,3 @@
 [dict]
 default=
-default[en_US.utf8]=
-default[zh_TW.utf8]=oxford-big5.ifo;cedict-big5.ifo
-default[zh_CN.utf8]=
+default[tr_TR.utf8]=
